# streamlit-crowdsourcing

./: .gitignore  LICENSE  README.md  TODO  app.py  config.json  config.py  dashboard.py  data_manager.py  data_source.py  generate_tokens.py  nonexistent_file.csv  pyproject.toml  requirements.txt
.streamlit/: config.toml
scripts/: generate_tokens.py
src/crowdsourcing/: __init__.py  cli.py  main.py
src/crowdsourcing/admin/: dashboard.py
src/crowdsourcing/core/: config.py  data_manager.py
static/css/: style.css
static/templates/: help.html
templates/: home.html
tests/: conftest.py  test_admin.py  test_data_manager.py
